fix: credit out of view

--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,22 @@
-canvas{
-    background-color: black;
+canvas {
+  background-color: black;
 }
 
-#container{
-    width: 800px;
-    height: 600px;
-    margin-left: auto;
-    margin-right: auto;
+#container {
+  width: 600px;
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-#settings{
-    width: 100%;
-    display: flex;
-    justify-content: center;
+#settings {
+  width: 100%;
+  min-width: 456px;
+  display: flex;
+  gap: 40px;
+  justify-content: center;
 }
 
-.settingItem{
-    margin-left: 50px;
-}
-
-#credit{
-    position: absolute;
-}
-
-#toggleAutoPlay{
-    width: 50px;
+#toggleAutoPlay {
+  width: 50px;
 }
